# mds_tf

./: Dockerfile  README.md  pyproject.toml  requirements.txt
data/: animal-similarity.csv
notebook/: mds_autograd_gen_data.ipynb  mds_autograd_morse.ipynb  mds_proto.ipynb
src/: autograd_mds.py  data_cleaning.py  mds_model.py
test/: test_gradient_descent.py  test_monotone_reg.py  test_stress.py
