[tool.poetry]
name = "tf_mds"
version = "0.1.0"
description = ""
authors = ["claurin"]

[tool.poetry.dependencies]
python = "3.8.10"
pandas = "*"
scipy = "*"
networkx = "*"
autograd = "*"
loguru = "*"
sklearn = "*"
openpyxl = "*"
jupyterlab = "*"
pytest = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]